# Crawler_german_localpoliticans

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose-docker.yml  docker-compose.vector.yml  docker-compose.yml  redis-docker-compose.yml  to-do.md  worker_config.toml
julia_container/: clean_html_docker.jl  docker-compose.yml  dockerfile
python_container/: crawler_ingest.py  db_writer.py  docker-compose.yml  dockerfile  requirements.txt  start_workers.py
src/: main.rs  vector.toml
validation/: validation.py
