[package]
name = "rust_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
url = "2.5.7"
dashmap = "5"
async-channel = "2.5.0"
lol_html = "1.1.0"
console-subscriber = "0.4.1"
parquet = { version = "52", features = ["arrow"] }
arrow = "52"
chrono = "=0.4.38"
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
aws-sdk-s3 = "1.106.0"
aws-config = "1.8.6"
uuid = { version = "1.18.1", features = ["v4"] }
serde = "1.0.225"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json", "env-filter"] }
config = { version = "0.14", default-features = false, features = ["json", "toml"] }
